[package]
name = "snek"
version = "0.1.0"
authors = ["LordMZTE <lord@mzte.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.1"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68.2"
piston2d-opengl_graphics = "0.77.0"
rand = "0.8.3"
clap = "2.33.3"
anyhow = "1.0.38"
font-kit = "0.10.0"
